--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,9 +1,9 @@
-name: Python Test Workflow
+name: Python and JS Test Workflow
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  test-server:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,11 +15,29 @@ jobs:
       with:
         python-version: 3.9
 
-    - name: Install dependencies
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run tests in requests.py with pytest
+    - name: Run Python tests with pytest
       run: |
         pytest testing/test_server.py
+
+  test-javascript:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 14
+
+    - name: Install JavaScript dependencies
+      run: npm install
+
+    - name: Run Jest tests
+      run: npm test
