--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thebubblebots",
   "version": "0.2.0",
-  "description": "checkers against ai",
+  "description": "Checkers against AI",
   "main": "index.js",
   "scripts": {
     "test": "jest"
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/N1ckP3rsl3y/TheBubbleBots/issues"
   },
-  "homepage": "https://github.com/N1ckP3rsl3y/TheBubbleBots#readme"
+  "homepage": "https://github.com/N1ckP3rsl3y/TheBubbleBots#readme",
+  "devDependencies": {
+    "jest": "^27.2.0"
+  }
 }
