--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/N1ckP3rsl3y/TheBubbleBots#readme",
   "devDependencies": {
-    "jest": "^27.2.0"
+    "jest": "^27.2.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "^5.16.1"
   }
 }
