--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "jest": "^27.2.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/jest-dom": "^5.16.1"
-  }
+  },
+  "jest": {
+    "moduleFileExtensions": ["js", "jsx", "json", "node"]
+  }  
 }
