--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "homepage": "https://github.com/N1ckP3rsl3y/TheBubbleBots#readme",
   "devDependencies": {
-    "jest": "^27.2.0",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
-    "@testing-library/jest-dom": "^5.16.1"
-  }  
+    "jest": "^27.5.1"
+  }
 }
