--- a/.github/workflows/automated_testing.yml
+++ b/.github/workflows/automated_testing.yml
@@ -20,9 +20,23 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Set up headless Chrome
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libgconf-2-4
+        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+        sudo dpkg -i google-chrome-stable_current_amd64.deb
+        rm google-chrome-stable_current_amd64.deb
+
     - name: Run Python tests with pytest
       run: |
+        python -m pip install selenium
         pytest testing/test_server.py
+
+    - name: Run acceptance tests with pytest
+      run: |
+        python -m pip install selenium
+        pytest testing/acceptance_test.py
 
   test-javascript:
     runs-on: ubuntu-latest
