--- a/.github/workflows/automated_testing.yml
+++ b/.github/workflows/automated_testing.yml
@@ -7,51 +7,76 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
 
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Set up headless Chrome
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libgconf-2-4
-        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-        sudo dpkg -i google-chrome-stable_current_amd64.deb
-        rm google-chrome-stable_current_amd64.deb
+      - name: Set up headless Chrome
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgconf-2-4
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo dpkg -i google-chrome-stable_current_amd64.deb
+          rm google-chrome-stable_current_amd64.deb
 
-    - name: Run Python tests with pytest
-      run: |
-        python -m pip install selenium
-        pytest testing/test_server.py
+      - name: Run Python tests with pytest
+        run: |
+          python -m pip install selenium
+          pytest testing/test_server.py
 
-    - name: Run acceptance tests with pytest
-      run: |
-        python -m pip install selenium
-        pytest testing/acceptance_test.py
+  acceptance-test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Set up headless Chrome
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgconf-2-4
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo dpkg -i google-chrome-stable_current_amd64.deb
+          rm google-chrome-stable_current_amd64.deb
+
+      - name: Run acceptance tests with pytest
+        run: |
+          python -m pip install selenium
+          pytest testing/acceptance_test.py
 
   test-javascript:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 14
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
 
-    - name: Install JavaScript dependencies
-      run: npm install
+      - name: Install JavaScript dependencies
+        run: npm install
 
-    - name: Run Jest tests
-      run: npm test
+      - name: Run Jest tests
+        run: npm test
