--- a/.github/workflows/automated_testing.yml
+++ b/.github/workflows/automated_testing.yml
@@ -2,12 +2,10 @@ name: Python and JS Test Workflow
 
 on: [push, pull_request]
 
-defaults:
-  runs-on: ubuntu-latest
-
 jobs:
   test-server:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -30,14 +28,14 @@ jobs:
           sudo dpkg -i google-chrome-stable_current_amd64.deb
           rm google-chrome-stable_current_amd64.deb
 
-      - name: Install Selenium
-        run: python -m pip install selenium
-
       - name: Run Python tests with pytest
-        run: pytest testing/test_server.py
+        run: |
+          python -m pip install selenium
+          pytest testing/test_server.py
 
   acceptance-test:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -60,14 +58,14 @@ jobs:
           sudo dpkg -i google-chrome-stable_current_amd64.deb
           rm google-chrome-stable_current_amd64.deb
 
-      - name: Install Selenium
-        run: python -m pip install selenium
-
       - name: Run acceptance tests with pytest
-        run: pytest testing/acceptance_test.py
+        run: |
+          python -m pip install selenium
+          pytest testing/acceptance_test.py
 
   test-javascript:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
